apps/base/swpt-debtors/shard/tasks-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-processor
  labels:
    app.kubernetes.io/component: tasks-processor
spec:
  replicas: 1  # Must be 1, unless the shard is being split (then it must be 0)!
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/component: tasks-processor
  template:
    metadata:
      labels:
        app.kubernetes.io/component: tasks-processor
        log.pipeline: swpt-python-logging
    spec:
      priorityClassName: shard-background-worker
      imagePullSecrets:
        - name: regcreds
      containers:
        - name: tasks-processor
          image: swpt-debtors
          args: ['all']
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
