apps/base/swpt-debtors/shard/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-shard-db
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels: {}
    - podSelector:
        matchExpressions:
        - key: app.kubernetes.io/component
          operator: In
          values: ["shard-splitting-job"]
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: postgres-operator
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: monitoring
      podSelector:
        matchExpressions:
        - key: app.kubernetes.io/name
          operator: In
          values: ["prometheus"]
